# SearchAndDoc_API

./:  main.py  .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  solr.Dockerfile
app/: main.py
db/: security.json  solr-config.sh  solr.py  solrconfig.xml
db/config/: solr_config.py
db/data_access/: collection_admin_service.py  pysolr.py  request.py  solr_http_client.py
db/data_access/interfaces/: collection_admin_service_interface.py  http_client_interface.py  pysolr_interface.py
db/helpers/: encode.py  sentence_transformer_impl.py  solr_request.py
db/infrastructure/: connection_factory_service.py
db/infrastructure/interfaces/: connection_factory_service_interface.py
db/services/: admin.py  collection_admin_service.py  connection.py  connection_factory_service.py  index_data_service.py  indexing_data_service.py  semantic_search_service.py
db/services/interfaces/: collection_admin_interface.py  collection_admin_service_interface.py  connection_factory_service_interface.py  (+4 more)
db/solr_service_layers/: solr_admin.py  solr_client.py  solr_connection.py  solr_index_collection_client.py  solr_search_collection_client.py
db/solr_utils/: pysolr_impl.py  pysolr_interface.py  sentence_transformer_impl.py  sentence_transformer_interface.py  solr_admin.py  solr_client.py  solr_config.py  solr_connection.py  solr_exceptions.py
db/utils/: cos_similarity_reranker.py  encode.py  pysolr.py  request.py  sentence_transformer.py  solr_knn_search.py
models/: base_model.py  indexing_collection_model.py  semantic_search_model.py  solr_collection_model.py
routers/: collections.py  create_collection_router.py  create_document_router.py  documents.py  index_data_router.py
schemas/: schema.xml
services/: create_collection_service.py  create_document_service.py  create_documentation_content_service.py  index_data_service.py  machine_learning_model.py
services/config/: config.py  groq_config.py
services/interfaces/: create_documentation_content_service_interface.py  machine_learning_model_interface.py
tests/db/: conftest.py  test_solr.py  test_solr_admin.py
tests/models/: conftest.py  test_semantic_search_model.py  test_solr_collection_model.py  test_solr_indexing_collection_model.py
tests/services/: conftest.py
utils/: get_logger.py  machine_learning_model.py
(+39 files in other folders)
