[project]
name = "main"
version = "0.1.0"
description = ""
authors = [
    {name = "Menna Tullah Magdy Taha",email = "menna.tullah.magdy731@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pysolr (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
